fix overflow problem

--- a/static/global.css
+++ b/static/global.css
@@ -74,7 +74,7 @@ a {
 }
 
 @media screen and (max-width: 768px) {
-  body {
+  html, body {
     overflow-x: hidden !important;
   }
 }
